--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
