--- a/server/package.json
+++ b/server/package.json
@@ -6,19 +6,19 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "prebuild": "../node_modules/.bin/rimraf dist",
+    "build": "../node_modules/.bin/nest build",
+    "format": "../node_modules/.bin/prettier --write \\\\\\\"server/src/**/*.ts\\\\\\\" \\\\\\\"test/**/*.ts\\\\\\\"",
+    "start": "../node_modules/.bin/nest start",
+    "start:dev": "../node_modules/.bin/nest start --watch",
+    "start:debug": "../node_modules/.bin/nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "lint": "../node_modules/.bin/eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
+    "test": "../node_modules/.bin/jest",
+    "test:watch": "../node_modules/.bin/jest --watch",
+    "test:cov": "../node_modules/.bin/jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ../node_modules/.bin/jest --runInBand",
+    "test:e2e": "../node_modules/.bin/jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -53,13 +53,16 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
+    "postcss": "^8.4.20",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
